--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="galery.html">Katalog</a>
     
               <li class="nav-item">
-                <a class="nav-link ">İletişim</a>
+                <a class="nav-link " >İletişim</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -80,6 +80,64 @@
       </div>
 
         
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-sm-4 bg-success text-white p-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero consequuntur ratione similique, vitae, expedita dicta deleniti ab facere earum qui aspernatur nulla itaque in molestias quod. Quibusdam, asperiores odio!
+            </div>
+            <div class="col-sm-4 bg-success text-white p-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero consequuntur ratione similique, vitae, expedita dicta deleniti ab facere earum qui aspernatur nulla itaque in molestias quod. Quibusdam, asperiores odio!
+            </div>
+            <div class="col-sm-4 bg-success text-white p-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate vero consequuntur ratione similique, vitae, expedita dicta deleniti ab facere earum qui aspernatur nulla itaque in molestias quod. Quibusdam, asperiores odio!
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="card shadow" style="width: 18rem;">
+                    <img src="img/passat-YzqR_cover.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">YENİ PASSAT!</h5>
+                      <p class="card-text">Farklı motor ve donanım seçenekleri ile sizlerle</p>
+                      <a href="#" class="btn btn-primary">İncele</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
 
  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
