iletişim sayfası oluşturdum , arka plan rengi değiştirdim , harita ekledim

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
                 <a class="nav-link " aria-current="page" href="index.html">2022 MODEL ARAÇLAR</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">sadfasdf</a>
+                <a class="nav-link" href="contact.html">İletişim</a>
                 <li class="nav-item">
                     <a class="nav-link" href="galery.html">Katalog</a>
     
-              <li class="nav-item">
-                <a class="nav-link " >İletişim</a>
+              
               </li>
             </ul>
             <form class="d-flex">
