--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>İLETİŞİM</title>
 </head>
 <body>
     <!doctype html>
@@ -50,14 +50,14 @@
 
       <nav class="bg-secondary " style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb p-2">
-          <li class="breadcrumb-item text-white"><a class="text-white text-decoration-none" href="#">Home</a></li>
-          <li class="breadcrumb-item active text-white" aria-current="page">Library</li>
+          <li class="breadcrumb-item text-white"><a class="text-white text-decoration-none" href="#">ESA AUTO</a></li>
+          <li class="breadcrumb-item active text-white" aria-current="page">İLETİŞİM</li>
         </ol>
       </nav>
 
       <div class="container">
         <div class="row">
-            <h1 class="text-center mt-5">Bizi Arayın</h1>
+            <h1 class="text-center mt-5">Biz Size Ulaşalım</h1>
         </div>
 
         <form class="row g-3 mt-4">
@@ -71,37 +71,35 @@
             </div>
             <div class="col-12">
               <label for="inputAddress" class="form-label">Adres</label>
-              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+              <input type="text" class="form-control" id="inputAddress" placeholder="">
             </div>
             <div class="col-12">
               <label for="inputAddress2" class="form-label">Telefon Numarası</label>
-              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+              <input type="text" class="form-control" id="inputAddress2" placeholder="0(5__)___ __ __">
             </div>
             <div class="col-md-6">
               <label for="inputCity" class="form-label">Şehir</label>
               <input type="text" class="form-control" id="inputCity">
             </div>
             <div class="col-md-4">
-              <label for="inputState" class="form-label">State</label>
-              <select id="inputState" class="form-select">
-                <option selected>Choose...</option>
-                <option>...</option>
-              </select>
+              <label for="inputState" class="form-label">E-Mail</label>
+              <input type="text" class="form-control">
+              
             </div>
             <div class="col-md-2">
-              <label for="inputZip" class="form-label">Zip</label>
-              <input type="text" class="form-control" id="inputZip">
+              <label for="inputZip" class="form-label">Randevu Tarihi</label>
+              <input type="text" class="form-control" id="inputZip" placeholder="__/__/____">
             </div>
             <div class="col-12">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="gridCheck">
                 <label class="form-check-label" for="gridCheck">
-                  Check me out
+                  Bilgilerim doğru , onaylıyorum.
                 </label>
               </div>
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary">Sign in</button>
+              <button type="submit" class="btn btn-primary">Gönder</button>
             </div>
           </form>
 
