--- a/contact.html
+++ b/contact.html
@@ -23,19 +23,19 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">ESA AUTO</a>
+          <a class="navbar-brand" href="index.html">ESA AUTO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="index.html">2022 MODEL ARAÇLAR</a>
+                <a class="nav-link " aria-current="page" href="about.html">Fiyat Kataloğu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">İletişim</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="galery.html">Katalog</a>
+                    <a class="nav-link" href="galery.html">Galeri</a>
     
               
               </li>
