--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="about.html">2022 MODEL ARAÇLAR</a>
+                <a class="nav-link " aria-current="page" href="about.html">Fiyat Kataloğu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">İletişim</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="galery.html">Katalog</a>
+                    <a class="nav-link" href="galery.html">Galeri</a>
     
               
               </li>
