FİYAT KATALOĞU BİTTİ (FOTOĞRAF,TABLO VE FİYATLAR EKLENDİ)

--- a/about.html
+++ b/about.html
@@ -40,10 +40,106 @@
           </nav>
           <nav class="bg-secondary " style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
             <ol class="breadcrumb p-2">
-              <li class="breadcrumb-item text-white"><a class="text-white text-decoration-none" href="#">ESA AUTO</a></li>
+              <li class="breadcrumb-item text-white"><a class="text-white text-decoration-none" href="index.html">ESA AUTO</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">FİYAT KATALOĞU</li>
             </ol>
           </nav>
-          
+
+          <div class="container">
+            <div class="row">
+                <h1 class="text-center mt-5">YENİ TIGUAN</h1>
+            </div>
+
+          <img src="img/tiguan kopya.jpg" class="img-thumbnail" alt="...">
+
+          <table class="table">
+            <thead>
+                <th scope="row">Motor ve Donanım Seçeneği</th>
+                <td colspan="2" class="table-active">Net Fiyat</td>
+                <td>Vergiler Dahil Teslim Fiyatı</td>
+            </thead>
+            <tbody>
+              <tr class="table">
+                <th scope="row">2,0 TDI SCR 150 PS 4M R-Line DSG</th>
+                <td colspan="2" class="table-active">390.386 ₺</td>
+                <td>1.155.400 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">1,5 TSI ACT 150 PS Elegance DSG</th>
+                <td colspan="2" class="table-active">340.394 ₺</td>
+                <td>724.800 ₺ </td>
+              </tr>
+              <tr>
+                <th scope="row">1,5 TSI ACT 150 PS Life DSG</th>
+                <td colspan="2" class="table-active">304.330 ₺</td>
+                <td>648.200 ₺</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="container">
+            <div class="row">
+                <h1 class="text-center mt-5">YENİ GOLF</h1>
+            </div>
+
+          <img src="img/Golf1yeni.jpeg" class="img-thumbnail" alt="...">
+
+          <table class="table">
+            <thead>
+                <th scope="row">Motor ve Donanım Seçeneği</th>
+                <td colspan="2" class="table-active">Net Fiyat</td>
+                <td>Vergiler Dahil Teslim Fiyatı</td>
+            </thead>
+            <tbody>
+              <tr class="table">
+                <th scope="row">1,5 eTSI 150 PS R-Line DSG</th>
+                <td colspan="2" class="table-active">293.407 ₺</td>
+                <td>625.000 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">1,0 eTSI 110 PS Style DSG</th>
+                <td colspan="2" class="table-active">254.927 ₺</td>
+                <td>542.800 ₺ </td>
+              </tr>
+              <tr>
+                <th scope="row">1,0 TSI 110 PS Impression Man.</th>
+                <td colspan="2" class="table-active">185.012 ₺</td>
+                <td>394.300 ₺</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="container">
+            <div class="row">
+                <h1 class="text-center mt-5">YENİ PASSAT</h1>
+            </div>
+
+          <img src="img/passat dış kopya.jpg" class="img-thumbnail" alt="...">
+
+          <table class="table">
+            <thead>
+                <th scope="row">Motor ve Donanım Seçeneği</th>
+                <td colspan="2" class="table-active">Net Fiyat</td>
+                <td>Vergiler Dahil Teslim Fiyatı</td>
+            </thead>
+            <tbody>
+              <tr class="table">
+                <th scope="row">2,0 TDI SCR 150 PS Elegance DSG</th>
+                <td colspan="2" class="table-active">422.454 ₺</td>
+                <td>1.250.000 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">1,5 TSI ACT 150 PS Elegance DSG</th>
+                <td colspan="2" class="table-active"> 369.584 ₺</td>
+                <td>786.800 ₺ </td>
+              </tr>
+              <tr>
+                <th scope="row">1,5 TSI ACT 150 PS Impression DSG</th>
+                <td colspan="2" class="table-active">268.690 ₺</td>
+                <td>572.500 ₺</td>
+              </tr>
+            </tbody>
+          </table>
+
        </body>      
 </html>
