title ikonu ekledim

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İLETİŞİM</title>
+    <link rel="shortcut icon" type="image" href="img/vw-logo-3304.png">
 </head>
 <body>
     <!doctype html>
@@ -50,14 +51,14 @@
 
       <nav class="bg-secondary " style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb p-2">
-          <li class="breadcrumb-item text-white"><a class="text-white text-decoration-none" href="#">ESA AUTO</a></li>
+          <li class="breadcrumb-item text-white"><a class="text-white text-decoration-none" href="index.html">ESA AUTO</a></li>
           <li class="breadcrumb-item active text-white" aria-current="page">İLETİŞİM</li>
         </ol>
       </nav>
 
       <div class="container">
         <div class="row">
-            <h1 class="text-center mt-5">Biz Size Ulaşalım</h1>
+            <h1 class="text mt-3">Biz Size Ulaşalım</h1>
         </div>
 
         <form class="row g-3 mt-4">
