--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+   
     <title>ESA AUTO</title>
+    <link rel="shortcut icon" type="image" href="img/vw-logo-3304.png">
     <link rel="stylesheet" href="style.css">
+
+   
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
