--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="style.css">
       </head>
       <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">ESA AUTO</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Araç ara" aria-label="Search">
-                  <button class="btn btn-outline-success text-white" type="submit">ARA</button>
+                  <button class="btn btn-outline-secondary text-white" type="submit">ARA</button>
                 </form>
               </div>
             </div>
@@ -48,19 +48,19 @@
 
           <div class="container">
             <div class="row">
-                <h1 class="text-center mt-5">YENİ TIGUAN</h1>
+                <h1 class="text-center mt-5 text">YENİ TIGUAN</h1>
             </div>
 
-          <img src="img/tiguan kopya.jpg" class="img-thumbnail" alt="...">
+          <img src="img/tiguan kopya.jpg" class="img-thumbnail bg-success" alt="...">
 
-          <table class="table">
+          <table class="table bg-secondary">
             <thead>
-                <th scope="row">Motor ve Donanım Seçeneği</th>
-                <td colspan="2" class="table-active">Net Fiyat</td>
-                <td>Vergiler Dahil Teslim Fiyatı</td>
+                <th scope="row ">Motor ve Donanım Seçeneği</th>
+                <td colspan="2" class="table-active ">Net Fiyat</td>
+                <td>Vergiler Dahil Teslim Fiyatı </td>
             </thead>
             <tbody>
-              <tr class="table">
+              <tr class="table bg-secondary">
                 <th scope="row">2,0 TDI SCR 150 PS 4M R-Line DSG</th>
                 <td colspan="2" class="table-active">390.386 ₺</td>
                 <td>1.155.400 ₺</td>
@@ -83,9 +83,9 @@
                 <h1 class="text-center mt-5">YENİ GOLF</h1>
             </div>
 
-          <img src="img/Golf1yeni.jpeg" class="img-thumbnail" alt="...">
+          <img src="img/Golf1yeni.jpeg" class="img-thumbnail bg-success" alt="...">
 
-          <table class="table">
+          <table class="table bg-secondary">
             <thead>
                 <th scope="row">Motor ve Donanım Seçeneği</th>
                 <td colspan="2" class="table-active">Net Fiyat</td>
@@ -112,12 +112,13 @@
 
           <div class="container">
             <div class="row">
-                <h1 class="text-center mt-5">YENİ PASSAT</h1>
+                <h1 class="text-center mt-5 ">YENİ PASSAT</h1>
             </div>
 
-          <img src="img/passat dış kopya.jpg" class="img-thumbnail" alt="...">
+          <img src="img/1440x645 passat.jpg" class="img-thumbnail bg-success" alt="...">
+          
 
-          <table class="table">
+          <table class="table bg-secondary">
             <thead>
                 <th scope="row">Motor ve Donanım Seçeneği</th>
                 <td colspan="2" class="table-active">Net Fiyat</td>
