--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">ESA AUTO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Araç ara" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">ARA</button>
+              <button class="btn btn-outline-secondary text-white" type="submit">ARA</button>
             </form>
           </div>
         </div>
@@ -100,7 +100,7 @@
               </div>
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary">Gönder</button>
+              <button type="submit" class="btn btn-success">Gönder</button>
             </div>
           </form>
 
