--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">ESA AUTO</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Araç ara" aria-label="Search">
-              <button class="btn btn-outline-success text-white" type="submit">ARA</button>
+              <button class="btn btn-outline-secondary text-white" type="submit">ARA</button>
             </form>
           </div>
         </div>
@@ -85,13 +85,13 @@
         
     <div class="container my-5">
         <div class="row">
-            <div class="col-sm-4 bg-success text-white p-3">
+            <div class="col-sm-4 bg-dark text-white p-3">
                 ESA AUTO Bünyesinde 2003 yılından bu yana araç alım satım sektöründe özenle ve müşteri memnuniyeti göz önünde bulundurularak yürüdüğümüz bu yolda sizlerde bize katılın.
             </div>
             <div class="col-sm-4 bg-success text-white p-3">
                 Volkswagen grubu araçlarımız ile önceliğimiz sizin konforunuz , güvenliğiniz ve memnuniyetinizdir. Bunların garantisini sizlere vermekteyiz.
             </div>
-            <div class="col-sm-4 bg-success text-white p-3">
+            <div class="col-sm-4 bg-dark text-white p-3">
                 Sizde konforlu bir deneyim istiyorsanız hemen bizlerle iletişime geçip araçlarımız ile test sürüşüne çıkabilirsiniz.
             </div>
         </div>
@@ -105,7 +105,7 @@
                     <div class="card-body">
                       <h5 class="card-title">YENİ PASSAT!</h5>
                       <p class="card-text">Farklı motor ve donanım seçenekleri ile sizlerle...</p>
-                      <a href="#" class="btn btn-primary">İncele</a>
+                      <a href="#" class="btn btn-success">İncele</a>
                     </div>
                   </div>
             </div>
@@ -115,7 +115,7 @@
                     <div class="card-body">
                       <h5 class="card-title">YENİ GOLF!</h5>
                       <p class="card-text">Farklı motor ve donanım seçenekleri ile sizlerle...</p>
-                      <a href="#" class="btn btn-primary">İncele</a>
+                      <a href="#" class="btn btn-success">İncele</a>
                     </div>
                   </div>
             </div>
@@ -125,7 +125,7 @@
                     <div class="card-body">
                       <h5 class="card-title">YENİ TIGUAN!</h5>
                       <p class="card-text">Farklı motor ve donanım seçenekleri ile sizlerle...</p>
-                      <a href="#" class="btn btn-primary">İncele</a>
+                      <a href="#" class="btn btn-success">İncele</a>
                     </div>
                   </div>
             </div>
