--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>ESA AUTO</title>
     <link rel="shortcut icon" type="image" href="img/vw-logo-3304.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/9cb952e27a.js" crossorigin="anonymous"></script>
 
    
   </head>
@@ -132,6 +133,45 @@
             
         </div>
     </div>
+
+
+    <footer class="mt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+              <ul>
+                <li>
+                  <a href="index.html">ESA AUTO</a>
+                </li>
+                <li>
+                  <a href="about.html">Fiyat Kataloğu</a>
+                </li>
+                <li>
+                  <a href="galery.html">Galeri</a>
+                </li>
+                <li>
+                  <a href="contact.html">İletişim</a>
+                </li>
+              </ul>
+          </div>
+        <div class="col-sm-4">
+          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        </div>
+        <div class="col-sm-4">
+          Bu Sayfanın Tüm Hakları Saklıdır.©2021
+        </div>
+        </div>
+      </div>
+    </footer>
+    
+
+  
+
+
+
+
 
  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
