footer da ki renkleri düzenledim

--- a/galery.html
+++ b/galery.html
@@ -12,6 +12,7 @@
  <link rel="shortcut icon" type="image" href="img/vw-logo-3304.png">
 
  <link rel="stylesheet" href="style.css">
+ <script src="https://kit.fontawesome.com/9cb952e27a.js" crossorigin="anonymous"></script>
 </head>
 <body>
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -108,8 +109,74 @@
       </div>
             </div>
         </div>
-   
+        <div class="container">
+            <div class="row">
+                <h1 class="text-center mt-5">PASSAT İNCELEME</h1>
+            </div>
 
+        <div class="container">
+            <div class="row">
+               <div class="col-sm-5"></div> 
+               <iframe width="500" height="515" src="https://www.youtube.com/embed/RZKnNo8fG60" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <h1 class="text-center mt-5">GOLF İNCELEME</h1>
+            </div>
+
+        <div class="container">
+            <div class="row">
+               <div class="col-sm-5"></div> 
+               <iframe width="500" height="515" src="https://www.youtube.com/embed/Gh2vqu9QmzY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            </div>
+
+        </div>
+        <div class="container">
+            <div class="row">
+                <h1 class="text-center mt-5">TIGUAN İNCELEME</h1>
+            </div>
+        <div class="container">
+            <div class="row">
+               <div class="col-sm-5"></div> 
+               <iframe width="500" height="515" src="https://www.youtube.com/embed/OI_hgwOkRjc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            </div>
+        </div>
+   
+        <footer class="mt-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-4">
+                    <ul>
+                      <li>
+                        <a href="index.html">ESA AUTO</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Fiyat Kataloğu</a>
+                      </li>
+                      <li>
+                        <a href="galery.html">Galeri</a>
+                      </li>
+                      <li>
+                        <a href="contact.html">İletişim</a>
+                      </li>
+                    </ul>
+                </div>
+              <div class="col-sm-4">
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+              </div>
+              <div class="col-sm-4">
+                Bu Sayfanın Tüm Hakları Saklıdır.©2021
+              </div>
+              </div>
+            </div>
+          </footer>
+          
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
