--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <title>FİYAT KATALOĞU</title>
         <link rel="shortcut icon" type="image" href="img/vw-logo-3304.png">
         <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/9cb952e27a.js" crossorigin="anonymous"></script>
       </head>
       <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -142,6 +143,38 @@
               </tr>
             </tbody>
           </table>
+
+          <footer class="mt-5">
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-4">
+                    <ul>
+                      <li>
+                        <a href="index.html">ESA AUTO</a>
+                      </li>
+                      <li>
+                        <a href="about.html">Fiyat Kataloğu</a>
+                      </li>
+                      <li>
+                        <a href="galery.html">Galeri</a>
+                      </li>
+                      <li>
+                        <a href="contact.html">İletişim</a>
+                      </li>
+                    </ul>
+                </div>
+              <div class="col-sm-4">
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+              </div>
+              <div class="col-sm-4">
+                Bu Sayfanın Tüm Hakları Saklıdır.©2021
+              </div>
+              </div>
+            </div>
+          </footer>
+          
 
        </body>      
 </html>
