--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İLETİŞİM</title>
     <link rel="shortcut icon" type="image" href="img/vw-logo-3304.png">
+    <script src="https://kit.fontawesome.com/9cb952e27a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!doctype html>
@@ -110,6 +111,38 @@
       <div class="row mt-5">
         <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Turkey%20kocaeli%20derince+(ESA%20AUTO)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/sport-gps/">bike gps</a></iframe></div>
       </div>
+
+      <footer class="mt-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+                <ul>
+                  <li>
+                    <a href="index.html">ESA AUTO</a>
+                  </li>
+                  <li>
+                    <a href="about.html">Fiyat Kataloğu</a>
+                  </li>
+                  <li>
+                    <a href="galery.html">Galeri</a>
+                  </li>
+                  <li>
+                    <a href="contact.html">İletişim</a>
+                  </li>
+                </ul>
+            </div>
+          <div class="col-sm-4">
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          </div>
+          <div class="col-sm-4">
+            Bu Sayfanın Tüm Hakları Saklıdır.©2021
+          </div>
+          </div>
+        </div>
+      </footer>
+      
 
    
  
