galeride ki resimler düzeltildi

--- a/galery.html
+++ b/galery.html
@@ -85,44 +85,27 @@
 
             <div class="container w-100 h-100 my-5">
                 <div class="row no-gutters gallerys">
-                    <h3>VW GOLF</h3>
+                    <h3>VW TIGUAN</h3>
                     <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf2.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf2.jpeg" alt=""></a>
+                        <a href="img/tiguan.jpg" target="_blank"> <img class="img-fluid img-thumbnail"
+                                src="img/tiguan.jpg" alt=""></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf2.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf2.jpeg" alt=""></a>
+                        <a href="img/tiguan dış arka.jpg" target="_blank"> <img class="img-fluid img-thumbnail"
+                                src="img/tiguan dış arka.jpg" alt=""></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf3.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf3.jpeg" alt=""></a>
+                        <a href="img/tiguan iç ön.jpg" target="_blank"> <img class="img-fluid img-thumbnail"
+                                src="img/tiguan iç ön.jpg" alt=""></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf3.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf3.jpeg" alt=""></a>
-                    </div>
-                    <h3>VW GOLF</h3>
-                    <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf2.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf2.jpeg" alt=""></a>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf2.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf2.jpeg" alt=""></a>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf3.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf3.jpeg" alt=""></a>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf3.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf3.jpeg" alt=""></a>
+                        <a href="img/tiguan iç arka.jpg" target="_blank"> <img class="img-fluid img-thumbnail"
+                                src="img/tiguan iç arka.jpg" alt=""></a>
                     </div>
                     <h3>VW GOLF</h3>
                     <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf2.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf2.jpeg" alt=""></a>
+                        <a href="img/Golf1.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
+                                src="img/Golf1.jpeg" alt=""></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-12 pb-4">
                         <a href="img/golf2.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
@@ -133,8 +116,25 @@
                                 src="img/golf3.jpeg" alt=""></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-12 pb-4">
-                        <a href="img/golf3.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
-                                src="img/golf3.jpeg" alt=""></a>
+                        <a href="img/golf4.jpeg" target="_blank"> <img class="img-fluid img-thumbnail"
+                                src="img/golf4.jpeg" alt=""></a>
+                    </div>
+                    <h3>VW PASSAT</h3>
+                    <div class="col-lg-3 col-md-3 col-12 pb-4">
+                        <a href="img/passat dış.jpg" target="_blank"> <img class="img-fluid img-thumbnail resim"
+                                src="img/passat dış.jpg" alt=""></a>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-12 pb-4">
+                        <a href="img/passat dış arka.jpg" target="_blank"> <img class="img-fluid img-thumbnail resim"
+                                src="img/passat dış arka.jpg" alt=""></a>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-12 pb-4">
+                        <a href="img/passat iç.jpg" target="_blank"> <img class="img-fluid img-thumbnail resim"
+                                src="img/passat iç.jpg" alt=""></a>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-12 pb-4">
+                        <a href="img/passat iç 2.jpg" target="_blank"> <img class="img-fluid img-thumbnail resim"
+                                src="img/passat iç 2.jpg" alt=""></a>
                     </div>
                    
                 </div>
